# hcwiid

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  README  README.md  TODO  hcwiid.cabal
System/: CWiid.hs  CWiid.hsc
test/: Makefile  Test.hs  TestMesg.hs
