Name:                   hcwiid
Version:                0.0.6.1
Author:                 Ivan Perez <ivan.perez@keera.co.uk>
Maintainer:             Ivan Perez <ivan.perez@keera.co.uk>
License:                GPL-2
License-File:           COPYING
Synopsis:               Library to interface with the wiimote
Description:            HCWiid is a working userspace driver along with various
 			applications implementing event drivers, multiple
			wiimote	connectivity, gesture recognition,
			and other Wiimote-based functionality.
Category:               System
Stability:              Experimental
cabal-version:          >= 1.10
Build-Type:             Simple
Homepage:               https://github.com/ivanperez-keera/hcwiid
Tested-with:            GHC == 7.0.4

Extra-source-files: README.md CHANGELOG test/Test.hs test/Makefile

Library
  default-language: Haskell2010

  GHC-Options:          -Wall
  Exposed-Modules:      System.CWiid
  Build-Depends:        base >= 4 && < 5, unix
  Includes:             cwiid.h
  Include-Dirs:         /usr/include, /usr/local/include, .
  Extra-Libraries:      bluetooth, cwiid
  Extra-Lib-Dirs:       /usr/lib, /usr/local/lib
  -- machine switch
  if os(linux)
    CPP-Options:        -DOS_Linux

Source-Repository head
  Type:                 git
  Location:             git@github.com:ivanperez-keera/hcwiid.git

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
