name:                   hcwiid
version:                0.0.6.1
author:                 Ivan Perez <ivan.perez@keera.co.uk>
maintainer:             Ivan Perez <ivan.perez@keera.co.uk>
license:                GPL-2
license-file:           COPYING
synopsis:               Library to interface with the wiimote
description:            HCWiid is a working userspace driver along with various
 			applications implementing event drivers, multiple
			wiimote	connectivity, gesture recognition,
			and other Wiimote-based functionality.
category:               System
stability:              Experimental
cabal-version:          >= 1.10
build-type:             Simple
homepage:               https://github.com/ivanperez-keera/hcwiid
tested-with:            GHC == 7.0.4

extra-source-files: README.md CHANGELOG test/Test.hs test/Makefile

library
  default-language: Haskell2010

  ghc-options:          -Wall
  exposed-modules:      System.CWiid
  build-depends:        base >= 4 && < 5, unix
  includes:             cwiid.h
  include-dirs:         /usr/include, /usr/local/include, .
  extra-libraries:      bluetooth, cwiid
  extra-lib-dirs:       /usr/lib, /usr/local/lib
  -- machine switch
  if os(linux)
    cpp-options:        -DOS_Linux

source-repository head
  type:                 git
  location:             git@github.com:ivanperez-keera/hcwiid.git

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
